# error-sensitivity-across-space-time-var

./: 10_bmp_supp.ipynb  11_supp_timetrace_single.ipynb  12_supp_Tan_vs_ES.ipynb  1_read_raw_data.ipynb  2_Fig2_timetrace_and_violin.ipynb  3_Fig3_in_condition_slopes.ipynb  4_Fig4_gen.ipynb  5_Fig5_Herzfeld.ipynb  6_calc_and_save_variability_estimates.ipynb  7_compute_corrs.ipynb  7_compute_corrs_t-test_of_correlations_results.csv  7_compute_mixedlm.ipynb  7_compute_mixedlm.py  8_analyze_mixedlm.ipynb  9_check_savings.ipynb  README.md  bmp_base.py  bmp_behav_proc.py  bmp_config.py  bmp_error_sensitivity.py  bmp_preprocess_behav_calc_ES.py  bmp_read_behav.py  pyproject.toml
figure/: __init__.py  imgfilemanip.py  mystatann.py  plots.py
