[project]
name = "error_sensitivity_NIH_data_behav_analysis" 
version = "0.1.0"
dependencies = [
    "cairosvg>=2.8.2",
    "configparser>=7.2.0",
    "interpret>=0.7.1",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
